--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,45 +1,47 @@
-version: '1'
+version: 1
+build:
+  dockerfile: Dockerfile
 configSchema:
-  type: "object"
+  type: object
   properties:
     mysql_host:
-      type: "string"
-      description: "MySQL server host"
-      default: "localhost"
+      type: string
+      description: MySQL server host
+      default: localhost
     mysql_port:
-      type: "integer"
-      description: "MySQL server port"
+      type: integer
+      description: MySQL server port
       default: 3306
     mysql_user:
-      type: "string"
-      description: "MySQL username"
+      type: string
+      description: MySQL username
     mysql_password:
-      type: "string"
-      description: "MySQL password"
-      format: "password"
+      type: string
+      description: MySQL password
+      format: password
     mysql_database:
-      type: "string"
-      description: "Default MySQL database"
+      type: string
+      description: Default MySQL database
     server_type:
-      type: "string"
-      description: "Server type to run (websocket or http)"
-      enum: ["websocket", "http"]
-      default: "http"
-  required: ["mysql_user", "mysql_password"]
+      type: string
+      description: Server type to run (websocket or http)
+      enum: [websocket, http]
+      default: http
+  required: [mysql_user, mysql_password]
 startCommand:
-  type: 'stdio'
+  type: stdio
   commandFunction: |
     function getCommand(config) {
       return {
-        command: 'node',
-        args: ['index.js'],
+        command: "node",
+        args: ["index.js"],
         env: {
-          "MYSQL_HOST": config.mysql_host || "localhost",
-          "MYSQL_PORT": String(config.mysql_port || 3306),
-          "MYSQL_USER": config.mysql_user,
-          "MYSQL_PASSWORD": config.mysql_password,
-          "MYSQL_DATABASE": config.mysql_database || "",
-          "SERVER_TYPE": config.server_type || "http"
+          MYSQL_HOST: config.mysql_host || "localhost",
+          MYSQL_PORT: String(config.mysql_port || 3306),
+          MYSQL_USER: config.mysql_user,
+          MYSQL_PASSWORD: config.mysql_password,
+          MYSQL_DATABASE: config.mysql_database || "",
+          SERVER_TYPE: config.server_type || "http"
         }
       };
     } 
